# PodcastAnalysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_BRIEF.md  README.md  audio_utils.py  config.py  docker-compose.yml  downloader.py  main.py  pipeline.py  pyproject.toml  scraper.py  server.py  split_audio.py  stt.py  summarizer.py  transcribe_file.py
cli/: analyze.py  split_audio.py  transcribe_file.py
design/: web-mvp-requirements.md
docs/compose/plans/: 2025-01-15-podcast-analysis.md
server/: app.py  audio_utils.py  config.py  pipeline.py  scraper.py  stt.py  summarizer.py
tests/: test_audio_utils.py  test_downloader.py  test_pipeline.py  test_scraper.py  test_server.py  test_stt.py  test_summarizer.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
web/src/: App.tsx  styles.css
web/src/components/: AudioProgressBar.tsx  EpisodeDescription.tsx  ErrorState.tsx  HealthStatus.tsx  Layout.tsx  LoadingState.tsx  SummaryView.tsx  ThemeToggle.tsx  TranscriptBlock.tsx  WaveformPlayer.tsx
web/src/lib/: api.ts  format.ts  routing.ts  theme.ts  types.ts
web/src/pages/: EpisodeDetailPage.tsx  HomePage.tsx  NewEpisodePage.tsx  ShareEpisodePage.tsx
