[project]
name = "podcast-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.124.2",
    "json-repair>=0.61.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.0.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
